🩹fix(profile): SKFP-471 fix view profile design, adjust icon, and fix variant sidebar collapse icon
* 🩹fix(profile): SKFP-471 fix view profile design, adjust icon, and fix variant sidebar collapse icon

* fix regression on tag

--- a/src/style/themes/kids-first/_theme.template.scss
+++ b/src/style/themes/kids-first/_theme.template.scss
@@ -56,7 +56,7 @@ $sidebar-menu-collapsed-width: 50px;
 $sidebar-menu-background-color: $cyan-7;
 $sidebar-menu-toggle-icon-size: 21px;
 
-$sidebar-menu-item-icon-size: 24px;
+$sidebar-menu-item-icon-size: 20px;
 $sidebar-menu-item-height: 50px;
 $sidebar-menu-item-text-color: $gray-1;
 $sidebar-menu-item-active-background-color: $cyan-8;
@@ -97,3 +97,6 @@ $prolabel-required-mark-color: $red-8;
 
 // UploadIds
 $file-upload-item-color: $blue-8;
+
+// Data release
+$data-release-icon-font-size: 20px;
