--- a/src/style/themes/kids-first/antd/tags.less
+++ b/src/style/themes/kids-first/antd/tags.less
@@ -1,17 +1,8 @@
-@tag-default-color: @cyan-7;
+@tag-default-color: @body-1;
 
 .@{tag-prefix-cls} {
   border: none;
-  background-color: @cyan-7;
-
-  .@{typography-prefix-cls} {
-    color: @gray-1;
-  }
-
-  .@{select-prefix-cls}-selection-item {
-    background: @cyan-7;
-    color: @gray-1;
-  }
+  background-color: @gray-4;
 
   &-close-icon {
     opacity: 0.8;
