--- a/src/views/Login/index.module.scss
+++ b/src/views/Login/index.module.scss
@@ -31,7 +31,7 @@
       padding: 16px 24px 24px 24px;
 
       .statsDivider {
-        border-top: 1px solid $gray-7;
+        border-top: 1px solid $cyan-7;
         margin: 12px 0;
       }
 
